Fix Margins and Add flex wrap to grid

--- a/css/fullScreenPhotos.css
+++ b/css/fullScreenPhotos.css
@@ -2,7 +2,7 @@
 .fullPhoto {
   display: flex;
   position: relative;
-  background-image: url("../img/desktopSelects/route555sign.jpg");
+  background-image: url("../img/desktopSelects/drivedetail4.jpg");
 
   /* Full height */
   height: 800px;
