--- a/css/style.css
+++ b/css/style.css
@@ -45,8 +45,16 @@ img {
   display: flex;
   flex-direction: row;
   margin: 0px 150px;
-  padding-bottom: 75px;
-  padding-top: 75px;
+
+
+}
+
+.bottomMargin {
+  margin: 0 0 100px 0;
+}
+
+.topMargin{
+  margin: 150px 0 0 0;
 }
 
 .infographicSection{
@@ -211,13 +219,15 @@ footer {
 
 .photoGrid{
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   padding: 0;
   margin: 0;
   overflow: hidden;
+
 }
 
-.photoBox:hover img.detail1 {
+/* .photoBox:hover img.detail1 {
   transform: scale(1.3);
   transform-origin: 50% 50%;
   transition-duration: 5s;
@@ -239,14 +249,20 @@ footer {
   transform: scale(1.3);
   transform-origin: 50% 50%;
   transition-duration: 5s;
+} */
+
+.photoBox img {
+  width:100%;
+  height:100%;
 }
 
 .photoBox{
-  display: flex;
-  flex-direction: column;
+  flex:25%;
+  width: 100%;
   padding: 0;
   margin: 0;
   overflow: hidden;
+  background-color: yellow;
 }
 
 
@@ -346,6 +362,10 @@ footer {
 
   .hideInDesktop{
     display: flex;
+  }
+
+  .photoBox{
+    flex:50%;
   }
 
   .footercontent{
